--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Efthymis Papageorgiou</title>
     <meta name="description" content="efthymis's personal web page">
-    <meta name="author" content="Papageorgiou Efthymios 4340">
+    <meta name="author" content="Papageorgiou Efthymios">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
@@ -15,6 +15,8 @@
 </head>
 
 <body>
+
+    <!-- Navigation Container-->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Efthymis Papapeorgiou</a>
@@ -38,6 +40,28 @@
             </ul>
         </div>
     </nav>
+
+    <!-- Home Container-->
+    <div class="container-fluid home-container">
+        <div class="row justify-content-center p-5">
+            <div class="col-3">
+                <audio controls>
+                    <source src="resources/audio/fart.mp3" type="audio/mpeg">
+                </audio> 
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-1 p-4">
+                <img src = "resources/images/cactus.png" alt = "cactus Image" />
+            </div>
+            <div class="col-1 hello-message-box">
+                Hi stranger,take a chill pill, make a coffee and relax to your chair listen to my story..
+            </div>
+            <div class="col-1 p-4">
+                <img src = "resources/images/coin.png" alt = "coin Image" />
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
