--- a/index.html
+++ b/index.html
@@ -9,39 +9,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <link rel="stylesheet" type="text/css" href="css/navbar.css">
-    <link rel="stylesheet" type="text/css" href="css/about.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-
-    <!-- Navigation Container-->
-    <nav class="navbar navbar-expand-lg">
+    <!-- Navigation Section-->
+    <nav class="navbar fixed-top navbar-expand-md">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Efthymis Papapeorgiou</a>
-            <ul class="navbar-nav mb-2 mb-lg-0">
-                <li class="nav-item"> <a class="nav-link active" aria-current="page" href="#">Home</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#">About</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#">My Work</a> </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        My Interests
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact Me</a>
-                </li>
-            </ul>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">  
+                <ul class="navbar-nav">
+                    <li class="nav-item"> <a class="nav-link active" aria-current="page" href="#">Home</a> </li>
+                    <li class="nav-item"> <a class="nav-link" href="#">About</a> </li>
+                    <li class="nav-item"> <a class="nav-link" href="#">My Work</a> </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            My Interests
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact Me</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
-    <!-- Home Container-->
+    <!-- Home Section-->
     <div class="container-fluid home-container">
         <div class="row justify-content-center p-5">
             <div class="col-3">
@@ -59,6 +61,28 @@
             </div>
             <div class="col-1 p-4">
                 <img src = "resources/images/coin.png" alt = "coin Image" />
+            </div>
+        </div>
+    </div>
+
+    <!-- About Container-->
+    <div class="container-fluid about-container">
+        <div class="row  justify-content-center  p-2">
+            <div class="col-2">
+                <h2>About me</h2>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-1 about-box">
+                <p>
+                    ωνοπδινφβωοπδφινωοδφινωοδφιδωνο0ovijnrdfopvnidfnv
+                    dfnv
+                    dpifvnpfdndpivnpfdnvpdfnivdfivindpfnvpndpvndf
+                    sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9idfvo
+                    vnoerinvoernovpneoinvoeinvoenrovnerovneonrvoeinrov
+                    ovineorvnopernvoernvoernovernivoernovneriovinwerovn
+                    voernivo[ertnivboertinboprdstnibopdxtinbopnsdfgitopbn]
+                </p>
             </div>
         </div>
     </div>
