--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
     <!-- Navigation Section-->
     <nav class="navbar fixed-top navbar-expand-md">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Efthymis Papapeorgiou</a>
+            <a class="navbar-brand" href="#">Efthymis Papapeorgiou </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">  
                 <ul class="navbar-nav">
                     <li class="nav-item"> <a class="nav-link active" aria-current="page" href="#">Home</a> </li>
-                    <li class="nav-item"> <a class="nav-link" href="#">About</a> </li>
-                    <li class="nav-item"> <a class="nav-link" href="#">My Work</a> </li>
+                    <li class="nav-item"> <a class="nav-link" href="#about-section">About</a> </li>
+                    <li class="nav-item"> <a class="nav-link" href="#mywork-section">My Work</a> </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             My Interests
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="#">skata 1</a></li>
+                            <li><a class="dropdown-item" href="#">skata 2</a></li>
+                            <li><a class="dropdown-item" href="#">skata 3</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -44,48 +44,50 @@
     </nav>
 
     <!-- Home Section-->
-    <div class="container-fluid home-container">
-        <div class="row justify-content-center p-5">
-            <div class="col-3">
-                <audio controls>
-                    <source src="resources/audio/fart.mp3" type="audio/mpeg">
-                </audio> 
-            </div>
-        </div>
+    <section class="container-fluid home-container">
+        <h1><i>Hi, i'm Efthymis!</i></h1>
         <div class="row justify-content-center">
-            <div class="col-1 p-4">
-                <img src = "resources/images/cactus.png" alt = "cactus Image" />
-            </div>
-            <div class="col-1 hello-message-box">
-                Hi stranger,take a chill pill, make a coffee and relax to your chair listen to my story..
-            </div>
-            <div class="col-1 p-4">
-                <img src = "resources/images/coin.png" alt = "coin Image" />
+            <div class="col-4 hello-message-box">
+                Hi friend, as you have already read, my name is Efthymis Papageorgiou and i'm a Computer Scientist. 
+                For the full experience of reading my bio, take a chill pill, make a green-tea and relax.
             </div>
         </div>
-    </div>
+        <div class="d-flex justify-content-center p-5">
+            <div class="col-lg-4 offset-2">
+                <audio controls>
+                    <source src="resources/audio/pokemon-gen4-night.mp3" type="audio/mpeg">
+                </audio>
+            </div>
+            <div class="col-lg-4">
+                <p> <i>listen to this as long as you reading</i> </p>
+            </div>  
+        </div>
+        <a class="d-flex justify-content-center scroll-down-arrow" href="#about-section">
+            <img src="resources/images/scroll-down-icon.png"/>
+        </a>
+    </section>
 
     <!-- About Container-->
-    <div class="container-fluid about-container">
-        <div class="row  justify-content-center  p-2">
-            <div class="col-2">
-                <h2>About me</h2>
-            </div>
-        </div>
+    <section id="about-section" class="container-fluid about-container">
+        <h1>About me</h1>
         <div class="row justify-content-center">
             <div class="col-1 about-box">
                 <p>
-                    ωνοπδινφβωοπδφινωοδφινωοδφιδωνο0ovijnrdfopvnidfnv
-                    dfnv
-                    dpifvnpfdndpivnpfdnvpdfnivdfivindpfnvpndpvndf
-                    sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9idfvo
-                    vnoerinvoernovpneoinvoeinvoenrovnerovneonrvoeinrov
-                    ovineorvnopernvoernvoernovernivoernovneriovinwerovn
-                    voernivo[ertnivboertinboprdstnibopdxtinbopnsdfgitopbn]
+                    The Lord of the Rings is an epic[1] high-fantasy novel[a] by English author and scholar J. R. R. Tolkien. Set in Middle-earth, intended to be Earth at some time in the distant past, the story began as a sequel to Tolkien's 1937 children's book The Hobbit, but eventually developed into a much larger work. Written in stages between 1937 and 1949, The Lord of the Rings is one of the best-selling books ever written, with over 150 million copies sold.[2]
+
+                    The title refers to the story's main antagonist, the Dark Lord Sauron, who in an earlier age created the One Ring to rule the other Rings of Power given to Men, Dwarves, and Elves, in his campaign to conquer all of Middle-earth. From homely beginnings in the Shire, a hobbit land reminiscent of the English countryside, the story ranges across Middle-earth, following the quest to destroy the One Ring mainly through the eyes of the hobbits Frodo, Sam, Merry and Pippin.
+
+                    Although often called a trilogy, the work was intended by Tolkien to be one volume of a two-volume set along with The Silmarillion.[3][T 2] For economic reasons, The Lord of the Rings was published over the course of a year from 29 July 1954 to 20 October 1955 in three volumes[3][4] titled The Fellowship of the Ring, The Two Towers, and The Return of the King. The work is divided internally into six books, two per volume, with several appendices of background material. Some later editions print the entire work in a single volume, following the author's original intent.
+
+                    Tolkien's work, after an initially mixed reception by the literary establishment, has been the subject of extensive analysis of its themes and origins. Influences on this earlier work, and on the story of The Lord of the Rings, include philology, mythology, Christianity, earlier fantasy works, and his own experiences in the First World War.
+
+                    The Lord of the Rings has since been reprinted many times and translated into at least 38 languages.[b] Its enduring popularity has led to numerous references in popular culture, the founding of many societies by fans of Tolkien's works,[5] and the publication of many books about Tolkien and his works. It has inspired many derivative works, including paintings, music, films, television, video games, and board games. It has helped to create and shape the modern fantasy genre, within which it is considered one of the greatest books of all time.
+
+                    Award-winning adaptations of The Lord of the Rings have been made for radio, theatre, and film. It has been named Britain's best-loved novel of all time in the BBC's 2003 poll The Big Read. 
                 </p>
             </div>
         </div>
-    </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
