fix: item-allignment at home section

--- a/index.html
+++ b/index.html
@@ -47,23 +47,28 @@
     <section class="container-fluid home-container">
         <h1><i>Hi, i'm Efthymis!</i></h1>
         <div class="row justify-content-center">
-            <div class="col-4 hello-message-box">
-                Hi friend, as you have already read, my name is Efthymis Papageorgiou and i'm a Computer Scientist. 
-                For the full experience of reading my bio, take a chill pill, make a green-tea and relax.
+            <div class="col me-image">
+                <img class="circular-image" src="resources/images/me.png" alt="it's me, efthymios" width="200" height="200">
             </div>
         </div>
-        <div class="d-flex justify-content-center p-5">
-            <div class="col-lg-4 offset-2">
+        <div class="row justify-content-center">
+            <div class="col-4 hello-message-box">
+                <p>
+                    Hi friend, as you have already read, my name is Efthymis Papageorgiou and i'm a Computer Scientist. 
+                    For the full experience of reading my bio, take a chill pill, make a green-tea and relax.
+                </p>
+            </div>
+        </div>
+        <div class="d-flex justify-content-center p-2">
+            <div class="col">
                 <audio controls>
                     <source src="resources/audio/pokemon-gen4-night.mp3" type="audio/mpeg">
                 </audio>
-            </div>
-            <div class="col-lg-4">
-                <p> <i>listen to this as long as you reading</i> </p>
+                <p> <i>listen to this as long as you reading..</i> </p>
             </div>  
         </div>
-        <a class="d-flex justify-content-center scroll-down-arrow" href="#about-section">
-            <img src="resources/images/scroll-down-icon.png"/>
+        <a class="d-flex scroll-down-arrow" href="#about-section">
+            <img src="resources/images/scroll-down-icon.png" width="70" height="70"/>
         </a>
     </section>
 
