--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
         <div class="row justify-content-center">
             <div class="col-4 hello-message-box">
                 <p>
-                    Hi friend, as you have already read, my name is Efthymis Papageorgiou and i'm a Computer Scientist. 
-                    For the full experience of reading my bio, take a chill pill, make a green-tea and relax.
+                    Hi friend, for the full experience of reading my bio, take a chill pill, make a green-tea and relax.
                 </p>
             </div>
         </div>
@@ -72,24 +71,55 @@
         </a>
     </section>
 
-    <!-- About Container-->
+    <!-- About Section-->
     <section id="about-section" class="container-fluid about-container">
         <h1>About me</h1>
         <div class="row justify-content-center">
-            <div class="col-1 about-box">
+            <div class="col-md-3">
+                <img class="about-image" src="resources/images/necronomicon.png" alt="it's me, efthymios" width="200" height="200">
+            </div>
+            <div class="col-6 about-box">
                 <p>
-                    The Lord of the Rings is an epic[1] high-fantasy novel[a] by English author and scholar J. R. R. Tolkien. Set in Middle-earth, intended to be Earth at some time in the distant past, the story began as a sequel to Tolkien's 1937 children's book The Hobbit, but eventually developed into a much larger work. Written in stages between 1937 and 1949, The Lord of the Rings is one of the best-selling books ever written, with over 150 million copies sold.[2]
+                    So, my name is Efthymis Papageorgiou<br>
+                    I am an undergraduate student at Computer Science Department of University of Crete 
+                    with interests in cloud computing, distributed systems, distributed computing, services and software engineering.
+                    Beyond the science stuff, i'm a big fan of Tolkien's & Lovecraft's world. <br><br>
 
-                    The title refers to the story's main antagonist, the Dark Lord Sauron, who in an earlier age created the One Ring to rule the other Rings of Power given to Men, Dwarves, and Elves, in his campaign to conquer all of Middle-earth. From homely beginnings in the Shire, a hobbit land reminiscent of the English countryside, the story ranges across Middle-earth, following the quest to destroy the One Ring mainly through the eyes of the hobbits Frodo, Sam, Merry and Pippin.
-
-                    Although often called a trilogy, the work was intended by Tolkien to be one volume of a two-volume set along with The Silmarillion.[3][T 2] For economic reasons, The Lord of the Rings was published over the course of a year from 29 July 1954 to 20 October 1955 in three volumes[3][4] titled The Fellowship of the Ring, The Two Towers, and The Return of the King. The work is divided internally into six books, two per volume, with several appendices of background material. Some later editions print the entire work in a single volume, following the author's original intent.
-
-                    Tolkien's work, after an initially mixed reception by the literary establishment, has been the subject of extensive analysis of its themes and origins. Influences on this earlier work, and on the story of The Lord of the Rings, include philology, mythology, Christianity, earlier fantasy works, and his own experiences in the First World War.
-
-                    The Lord of the Rings has since been reprinted many times and translated into at least 38 languages.[b] Its enduring popularity has led to numerous references in popular culture, the founding of many societies by fans of Tolkien's works,[5] and the publication of many books about Tolkien and his works. It has inspired many derivative works, including paintings, music, films, television, video games, and board games. It has helped to create and shape the modern fantasy genre, within which it is considered one of the greatest books of all time.
-
-                    Award-winning adaptations of The Lord of the Rings have been made for radio, theatre, and film. It has been named Britain's best-loved novel of all time in the BBC's 2003 poll The Big Read. 
+                    <i>Elen sila lumenn omentilmo</i>
                 </p>
+            </div>
+            <div class="col-md-3">
+                <img class="about-image" src="resources/images/ring.png" alt="it's me, efthymios" width="200" height="200">
+            </div>
+        </div>
+    </section>
+
+    <!-- My-Work Section -->
+    <section id="mywork-section" class="container-fluid mywork-container">
+        <h1>My Work</h1>
+        <h2>CSD Projects</h2>
+        <div class="row justify-content-center">
+            <div class="col-3 project-card">
+
+            </div>
+            <div class="col-3 project-card">
+
+            </div>
+            <div class="col-3 project-card">
+
+            </div>
+            <div class="col-3 project-card">
+
+            </div>
+        </div>
+
+        <h2>Personal Projects</h2>
+        <div class="row justify-content-center">
+            <div class="col-6 project-card">
+
+            </div>
+            <div class="col-6 project-card">
+
             </div>
         </div>
     </section>
