feat: my-work section

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="col-md-3">
                 <img class="about-image" src="resources/images/necronomicon.png" alt="it's me, efthymios" width="200" height="200">
             </div>
-            <div class="col-6 about-box">
+            <div class="col-md-6 about-box">
                 <p>
                     So, my name is Efthymis Papageorgiou<br>
                     I am an undergraduate student at Computer Science Department of University of Crete 
@@ -97,29 +97,57 @@
     <!-- My-Work Section -->
     <section id="mywork-section" class="container-fluid mywork-container">
         <h1>My Work</h1>
-        <h2>CSD Projects</h2>
+        <div style="margin-top: 50px;">
+            <h2>CSD Projects</h2>
+        </div>
         <div class="row justify-content-center">
             <div class="col-3 project-card">
-
+                <img src="resources/images/amphipolis.jpg" alt="amphipolis" width="81" height="81">
+                <div class="project-card-summary">
+                    <h6>Amphipolis Game</h6>
+                    <a href="#">check on github</a>
+                </div>
             </div>
             <div class="col-3 project-card">
-
+                <img src="resources/images/among_us.jpg" alt="among us" width="81" height="81">
+                <div class="project-card-summary">
+                    <h6>Among Us Game</h6>
+                    <a href="#">check on github</a>
+                </div>
             </div>
             <div class="col-3 project-card">
-
+                <img src="resources/images/web_server_team_project.png" alt="a distributed system" width="81" height="81">
+                <div class="project-card-summary">
+                    <h6>Distributed System</h6>
+                    <a href="#">check on github</a>
+                </div>
             </div>
             <div class="col-3 project-card">
-
+                <img src="resources/images/credit_card_company.png" alt="credit card company" width="81" height="81">
+                <div class="project-card-summary">
+                    <h6>Credit Card Company</h6>
+                    <a href="#">check on github</a>
+                </div>
             </div>
         </div>
 
-        <h2>Personal Projects</h2>
+        <div style="margin-top: 50px;">
+            <h2>Personal Projects</h2>
+        </div>
         <div class="row justify-content-center">
-            <div class="col-6 project-card">
-
+            <div class="col-3 project-card">
+                <img src="resources/images/game_of_life_project.png" alt="game of life" width="81" height="81">
+                <div class="project-card-summary">
+                    <h6>Conway's Game of Life</h6>
+                    <a href="#">check on github</a>
+                </div>
             </div>
-            <div class="col-6 project-card">
-
+            <div class="col-3 project-card">
+                <img src="resources/images/pdf_tool_project.png" alt="pdf tool" width="81" height="81">
+                <div class="project-card-summary">
+                    <h6>PDF Converter Tool</h6>
+                    <a href="#">check on github</a>
+                </div>
             </div>
         </div>
     </section>
