--- a/index.html
+++ b/index.html
@@ -152,6 +152,36 @@
         </div>
     </section>
 
+    <footer class="footer-section">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div>
+                        <h4>Mail me</h4>
+                        <a href = "mailto: papageorgiou.efthymis@protonmail.com">papageorgiou.efthymis@protonmail.com   </a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div>
+                        <h4>Follow me</h4>
+                        <a href="#"><img src="resources/images/linkedin.png" width="30px" height="30px"></img></a>
+                        <a href="#"><img src="resources/images/facebook.png" width="30px" height="30px"></img></a>
+                        <a href="#"><img src="resources/images/instagram.png" width="30px" height="30px"></img></a>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col">
+                    <p class="copyright-text">Copyright &copy; 2022 All Rights Reserved by 
+                        <a href="#">Efthymis Papageogiou</a>.
+                </div>
+
+            </div>
+        </div>
+
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
