fix: ui/ux improvements

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
         <div class="container-fluid">
             <h1><mark class="red-mark">My Work</mark></h1>
         
+            <!-- CSD-Projects Sub-Section -->
             <h2><mark class="yellow-mark">CSD Projects</mark></h2>
             <div class="row justify-content-center">
                 <div class="col-3 project-card">
@@ -164,6 +165,7 @@
             </div>
         </div>
 
+        <!-- Personal-Projects Sub-Section -->
         <h2><mark class="yellow-mark">Personal Projects</mark></h2>
         <div class="row justify-content-center">
             <div class="col-3 project-card">
@@ -189,6 +191,7 @@
             
             <h1><mark class="red-mark">My Interests</mark></h1>
 
+            <!-- Music Sub-Section -->
             <section id="interests-music-section">
                 <h2><mark class="yellow-mark">Music</mark></h2>
                 <div class="row justify-content-center">
@@ -239,6 +242,7 @@
                 </div>
             </section>
 
+            <!-- Board-Games Sub-Section -->
             <section id="interests-board_games-section">
                 <h2><mark class="yellow-mark">Board Games</mark></h2>
                 <div class="container-fluid">
@@ -265,6 +269,7 @@
                 </div>
             </section>
 
+            <!-- Articles Sub-Section -->
             <section id="interests-useful_articles-section">
                 <h2><mark class="yellow-mark">Useful Articles</mark></h2>
                 <div class="container-fluid">
@@ -311,6 +316,7 @@
                 </div>       
             </section>
 
+            <!-- Hobbies Sub-Section -->
             <section id="interests-hobbies-section">
                 <h2><mark class="yellow-mark">Hobbies</mark></h2>
                 <div class="container-fluid">
